simple change about info in box by pokemon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     </div>
     <div>
       <h4>{{pokemon.name}}</h4>
-      <p>{{pokemon.hp}}</p>
-      <p>{{pokemon.types}}</p>
-      <p> {{pokemon.cp}}</p>
+      <p>Vie : {{pokemon.hp}}</p>
+      <p>Type : {{pokemon.types}}</p>
+      <p>CP : {{pokemon.cp}}</p>
     </div>
   </div>
 </div>
