--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -49,6 +49,7 @@
         </div>
         <div class="card-action">
           <a (click)="goToPokemonList()">Retour</a>
+          <a (click)="EditPokemon()">Editer</a>
         </div>
       </div>
     </div>
